--- a/pubs.html
+++ b/pubs.html
@@ -347,23 +347,6 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
-<pre><code id="bibtex-Zhou2020early">
-@article{Zhou2020early,
-  title = {Early identification of an impending rockslide location via a spatially-aided Gaussian mixture model},
-  year = {2020},
-  author = {Shuo Zhou and Howard Bondell and Antoinette Tordesillas and Benjamin I. P. Rubinstein and James Bailey},
-  journal = {Annals of Applied Statistics},
-  volume = {14},
-  number = {2},
-  pages = {977-992},
-}
-</code></pre></div>
-
-<ul>
-<li>Zhou, Shuo, Howard Bondell, Antoinette Tordesillas, Benjamin I. P. Rubinstein, and James Bailey. “Early identification of an impending rockslide location via a spatially-aided Gaussian mixture model”. In: <em>Annals of Applied Statistics</em> 14.2 (2020), pp. 977-992 [<a href="http://dx.doi.org/10.1214/20-AOAS1326">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('Zhou2020early.bib', 'bibtex-Zhou2020early')">BibTeX</a>]</li>
-</ul>
-
-<div class="bibox" style="display: none;">
 <pre><code id="bibtex-leins2020tracking">
 @article{leins2020tracking,
   title = {Tracking, tracing, trust: Contemplating mitigating the impact of COVID-19 through technological interventions},
@@ -391,6 +374,23 @@ $(document).ready(function () {
 
 <ul>
 <li>Marchant, Neil G. and Benjamin I. P. Rubinstein. <em>A general framework for label-efficient online evaluation with asymptotic guarantees</em>. arXiv:2006.06963 [cs.LG]. Jun. 2020 [<a href="https://arxiv.org/abs/2006.06963">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2020a.bib', 'bibtex-marchant2020a')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-Zhou2020early">
+@article{Zhou2020early,
+  title = {Early identification of an impending rockslide location via a spatially-aided Gaussian mixture model},
+  year = {2020},
+  author = {Shuo Zhou and Howard Bondell and Antoinette Tordesillas and Benjamin I. P. Rubinstein and James Bailey},
+  journal = {Annals of Applied Statistics},
+  volume = {14},
+  number = {2},
+  pages = {977-992},
+}
+</code></pre></div>
+
+<ul>
+<li>Zhou, Shuo, Howard Bondell, Antoinette Tordesillas, Benjamin I. P. Rubinstein, and James Bailey. “Early identification of an impending rockslide location via a spatially-aided Gaussian mixture model”. In: <em>Annals of Applied Statistics</em> 14.2 (2020), pp. 977-992 [<a href="http://dx.doi.org/10.1214/20-AOAS1326">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('Zhou2020early.bib', 'bibtex-Zhou2020early')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -457,6 +457,36 @@ $(document).ready(function () {
 
 <ul>
 <li>Han, Yi, David Hubczenko, Paul Montague, Olivier De Vel, Tamas Abraham, Benjamin I. P. Rubinstein, Christopher Leckie, Tansu Alpcan, and Sarah Erfani. “Adversarial Reinforcement Learning under Partial Observability in Autonomous Computer Network Defence”. In: <em>2020 International Joint Conference on Neural Networks</em>. IJCNN. To appear. 2020 [<a style="cursor: pointer;" onclick="DownloadToFile('han2020adversarial.bib', 'bibtex-han2020adversarial')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-zhang2020improving">
+@misc{zhang2020improving,
+  title = {Improving Interpretability of {CNN} Models Using Non-Negative Concept Activation Vectors},
+  author = {Ruihan Zhang and Prashan Madumal and Tim Miller and Kris Ehinger and Benjamin Rubinstein},
+  note = {arXiv:2006.15417 [cs.CV]},
+  year = {2020},
+  month = {Jun},
+}
+</code></pre></div>
+
+<ul>
+<li>Zhang, Ruihan, Prashan Madumal, Tim Miller, Kris Ehinger, and Benjamin Rubinstein. <em>Improving Interpretability of CNN Models Using Non-Negative Concept Activation Vectors</em>. arXiv:2006.15417 [cs.CV]. Jun. 2020 [<a href="https://arxiv.org/abs/2006.15417">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('zhang2020improving.bib', 'bibtex-zhang2020improving')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-gelbhart2020discrete">
+@misc{gelbhart2020discrete,
+  title = {Discrete Few-Shot Learning for Pan Privacy},
+  author = {Roei Gelbhart and Benjamin I. P. Rubinstein},
+  note = {arXiv:2006.13120 [cs.LG]},
+  year = {2020},
+  month = {Jun},
+}
+</code></pre></div>
+
+<ul>
+<li>Gelbhart, Roei and Benjamin I. P. Rubinstein. <em>Discrete Few-Shot Learning for Pan Privacy</em>. arXiv:2006.13120 [cs.LG]. Jun. 2020 [<a href="https://arxiv.org/abs/2006.13120">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('gelbhart2020discrete.bib', 'bibtex-gelbhart2020discrete')">BibTeX</a>]</li>
 </ul>
 </div>
 <div id="section-1" class="section level3">
