--- a/pubs.html
+++ b/pubs.html
@@ -377,6 +377,21 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-edwards2020a">
+@misc{edwards2020a,
+  title = {A Graph Symmetrisation Bound on Channel Information Leakage under Blowfish Privacy},
+  author = {Tobias Edwards and Benjamin I. P. Rubinstein and Zuhe Zhang and Sanming Zhou},
+  note = {arXiv:2007.05975 [cs.IT]},
+  year = {2020},
+  month = {Jul},
+}
+</code></pre></div>
+
+<ul>
+<li>Edwards, Tobias, Benjamin I. P. Rubinstein, Zuhe Zhang, and Sanming Zhou. <em>A Graph Symmetrisation Bound on Channel Information Leakage under Blowfish Privacy</em>. arXiv:2007.05975 [cs.IT]. Jul. 2020 [<a href="https://arxiv.org/abs/2007.05975">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('edwards2020a.bib', 'bibtex-edwards2020a')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-Zhou2020early">
 @article{Zhou2020early,
   title = {Early identification of an impending rockslide location via a spatially-aided Gaussian mixture model},
