--- a/pubs.html
+++ b/pubs.html
@@ -409,6 +409,22 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-liu2020legionb">
+@inproceedings{liu2020legionb,
+  title = {Legion: Best-First Concolic Testing},
+  year = {2020},
+  author = {Dongge Liu and Gidon Ernst and Toby Murray and Benjamin I. P. Rubinstein},
+  booktitle = {The 35th IEEE/ACM International Conference on Automated Software Engineering},
+  series = {ASE},
+  note = {Accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>Liu, Dongge, Gidon Ernst, Toby Murray, and Benjamin I. P. Rubinstein. “Legion: Best-First Concolic Testing”. In: <em>The 35th IEEE/ACM International Conference on Automated Software Engineering</em>. ASE. Accepted. 2020 [<a href="https://github.com/Alan32Liu/Legion">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('liu2020legionb.bib', 'bibtex-liu2020legionb')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-liu2020legion">
 @inproceedings{liu2020legion,
   title = {Legion: Best-First Concolic Testing},
