--- a/pubs.html
+++ b/pubs.html
@@ -330,6 +330,22 @@ $(document).ready(function () {
 <h3>2020</h3>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-marchant2020dblink">
+@article{marchant2020dblink,
+  title = {d-blink: Distributed End-to-End Bayesian Entity Resolution},
+  author = {Neil G. Marchant and Rebecca C. Steorts and Andee Kaplan and Benjamin I. P. Rubinstein and Daniel N. Elazar},
+  journal = {Journal of Computational and Graphical Statistics},
+  year = {2020},
+  month = {Sep},
+  note = {Accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>Marchant, Neil G., Rebecca C. Steorts, Andee Kaplan, Benjamin I. P. Rubinstein, and Daniel N. Elazar. “d-blink: Distributed End-to-End Bayesian Entity Resolution”. In: <em>Journal of Computational and Graphical Statistics</em> (Sep. 2020). Accepted. [<a href="https://arxiv.org/abs/1909.06039">full</a>; <a href="https://github.com/ngmarchant/dblink">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2020dblink.bib', 'bibtex-marchant2020dblink')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-fish2020sampling">
 @inproceedings{fish2020sampling,
   title = {Sampling Without Compromising Accuracy in Adaptive Data Analysis},
@@ -618,23 +634,6 @@ $(document).ready(function () {
 
 <ul>
 <li>Rubinstein, Benjamin I. P. “Data Security and AI”. In: <em>Closer to the machine: Technical, social, and legal aspects of AI</em>. Ed. by Cliff Betram, Asher Gibson and Adriana Nugent. Office of the Victorian Information Commissioner, 2019, pp. 105-119 [<a href="https://ovic.vic.gov.au/closer-to-the-machine-ai-publication/">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2019data.bib', 'bibtex-rubinstein2019data')">BibTeX</a>]</li>
-</ul>
-
-<div class="bibox" style="display: none;">
-<pre><code id="bibtex-marchant2019dblink">
-@misc{marchant2019dblink,
-  title = {d-blink: Distributed End-to-End Bayesian Entity Resolution},
-  author = {Neil G. Marchant and Rebecca C. Steorts and Andee Kaplan and Benjamin I. P. Rubinstein and Daniel N. Elazar},
-  eprint = {1909.06039},
-  year = {2019},
-  month = {Sep},
-  archiveprefix = {arXiv},
-  primaryclass = {stat.CO},
-}
-</code></pre></div>
-
-<ul>
-<li>Marchant, Neil G., Rebecca C. Steorts, Andee Kaplan, Benjamin I. P. Rubinstein, and Daniel N. Elazar. <em>d-blink: Distributed End-to-End Bayesian Entity Resolution</em>. Sep. 2019. arXiv: 1909.06039 [stat.CO]. [<a href="https://arxiv.org/abs/1909.06039">PDF</a>; <a href="https://github.com/ngmarchant/dblink">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2019dblink.bib', 'bibtex-marchant2019dblink')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
