--- a/pubs.html
+++ b/pubs.html
@@ -342,7 +342,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Marchant, Neil G., Rebecca C. Steorts, Andee Kaplan, Benjamin I. P. Rubinstein, and Daniel N. Elazar. “d-blink: Distributed End-to-End Bayesian Entity Resolution”. In: <em>Journal of Computational and Graphical Statistics</em> (Sep. 2020). Accepted. [<a href="https://arxiv.org/abs/1909.06039">full</a>; <a href="https://github.com/ngmarchant/dblink">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2020dblink.bib', 'bibtex-marchant2020dblink')">BibTeX</a>]</li>
+<li>Marchant, Neil G., Rebecca C. Steorts, Andee Kaplan, Benjamin I. P. Rubinstein, and Daniel N. Elazar. “d-blink: Distributed End-to-End Bayesian Entity Resolution”. In: <em>Journal of Computational and Graphical Statistics</em> (Sep. 2020). Accepted. [<a href="https://arxiv.org/abs/1909.06039">full</a>; <a href="https://github.com/ngmarchant/dblink">software</a>; <a href="https://amstat.tandfonline.com/doi/full/10.1080/10618600.2020.1825451">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2020dblink.bib', 'bibtex-marchant2020dblink')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
