--- a/pubs.html
+++ b/pubs.html
@@ -393,6 +393,21 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-perera2020">
+@misc{perera2020,
+  title = {{DBA} bandits: Self-driving index tuning under ad-hoc, analytical workloads with safety guarantees},
+  author = {R. Malinga Perera and Bastian Oetomo and Benjamin I. P. Rubinstein and Renata Borovica-Gajic},
+  note = {arXiv:2010.09208 [cs.DB]},
+  year = {2020},
+  month = {Oct},
+}
+</code></pre></div>
+
+<ul>
+<li>Perera, R. Malinga, Bastian Oetomo, Benjamin I. P. Rubinstein, and Renata Borovica-Gajic. <em>DBA bandits: Self-driving index tuning under ad-hoc, analytical workloads with safety guarantees</em>. arXiv:2010.09208 [cs.DB]. Oct. 2020 [<a href="https://arxiv.org/abs/2010.09208">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('perera2020.bib', 'bibtex-perera2020')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-edwards2020a">
 @misc{edwards2020a,
   title = {A Graph Symmetrisation Bound on Channel Information Leakage under Blowfish Privacy},
