--- a/pubs.html
+++ b/pubs.html
@@ -423,6 +423,21 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-xu2020a">
+@misc{xu2020a,
+  title = {Targeted Poisoning Attacks on Black-Box Neural Machine Translation},
+  author = {Chang Xu and Jun Wang and Yuqing Tang and Francisco Guzman and Benjamin I. P. Rubinstein and Trevor Cohn},
+  note = {arXiv:2011.00675 [cs.CL]},
+  year = {2020},
+  month = {Oct},
+}
+</code></pre></div>
+
+<ul>
+<li>Xu, Chang, Jun Wang, Yuqing Tang, Francisco Guzman, Benjamin I. P. Rubinstein, and Trevor Cohn. <em>Targeted Poisoning Attacks on Black-Box Neural Machine Translation</em>. arXiv:2011.00675 [cs.CL]. Oct. 2020 [<a href="https://arxiv.org/abs/2011.00675">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('xu2020a.bib', 'bibtex-xu2020a')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-Zhou2020early">
 @article{Zhou2020early,
   title = {Early identification of an impending rockslide location via a spatially-aided Gaussian mixture model},
