--- a/pubs.html
+++ b/pubs.html
@@ -378,6 +378,21 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-culnane2020a">
+@misc{culnane2020a,
+  title = {Not fit for Purpose: A critical analysis of the 'Five Safes'},
+  author = {Chris Culnane and Benjamin I. P. Rubinstein and David Watts},
+  note = {arXiv:2011.02142 [cs.CR]},
+  year = {2020},
+  month = {Nov},
+}
+</code></pre></div>
+
+<ul>
+<li>Culnane, Chris, Benjamin I. P. Rubinstein, and David Watts. <em>Not fit for Purpose: A critical analysis of the ‘Five Safes’</em>. arXiv:2011.02142 [cs.CR]. Nov. 2020 [<a href="https://arxiv.org/abs/2011.02142">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('culnane2020a.bib', 'bibtex-culnane2020a')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-marchant2020a">
 @misc{marchant2020a,
   title = {A general framework for label-efficient online evaluation with asymptotic guarantees},
@@ -390,6 +405,21 @@ $(document).ready(function () {
 
 <ul>
 <li>Marchant, Neil G. and Benjamin I. P. Rubinstein. <em>A general framework for label-efficient online evaluation with asymptotic guarantees</em>. arXiv:2006.06963 [cs.LG]. Jun. 2020 [<a href="https://arxiv.org/abs/2006.06963">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2020a.bib', 'bibtex-marchant2020a')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-xu2020a">
+@misc{xu2020a,
+  title = {Targeted Poisoning Attacks on Black-Box Neural Machine Translation},
+  author = {Chang Xu and Jun Wang and Yuqing Tang and Francisco Guzman and Benjamin I. P. Rubinstein and Trevor Cohn},
+  note = {arXiv:2011.00675 [cs.CL]},
+  year = {2020},
+  month = {Oct},
+}
+</code></pre></div>
+
+<ul>
+<li>Xu, Chang, Jun Wang, Yuqing Tang, Francisco Guzman, Benjamin I. P. Rubinstein, and Trevor Cohn. <em>Targeted Poisoning Attacks on Black-Box Neural Machine Translation</em>. arXiv:2011.00675 [cs.CL]. Oct. 2020 [<a href="https://arxiv.org/abs/2011.00675">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('xu2020a.bib', 'bibtex-xu2020a')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -420,21 +450,6 @@ $(document).ready(function () {
 
 <ul>
 <li>Edwards, Tobias, Benjamin I. P. Rubinstein, Zuhe Zhang, and Sanming Zhou. <em>A Graph Symmetrisation Bound on Channel Information Leakage under Blowfish Privacy</em>. arXiv:2007.05975 [cs.IT]. Jul. 2020 [<a href="https://arxiv.org/abs/2007.05975">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('edwards2020a.bib', 'bibtex-edwards2020a')">BibTeX</a>]</li>
-</ul>
-
-<div class="bibox" style="display: none;">
-<pre><code id="bibtex-xu2020a">
-@misc{xu2020a,
-  title = {Targeted Poisoning Attacks on Black-Box Neural Machine Translation},
-  author = {Chang Xu and Jun Wang and Yuqing Tang and Francisco Guzman and Benjamin I. P. Rubinstein and Trevor Cohn},
-  note = {arXiv:2011.00675 [cs.CL]},
-  year = {2020},
-  month = {Oct},
-}
-</code></pre></div>
-
-<ul>
-<li>Xu, Chang, Jun Wang, Yuqing Tang, Francisco Guzman, Benjamin I. P. Rubinstein, and Trevor Cohn. <em>Targeted Poisoning Attacks on Black-Box Neural Machine Translation</em>. arXiv:2011.00675 [cs.CL]. Oct. 2020 [<a href="https://arxiv.org/abs/2011.00675">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('xu2020a.bib', 'bibtex-xu2020a')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
