--- a/pubs.html
+++ b/pubs.html
@@ -325,7 +325,7 @@ $(document).ready(function () {
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
 <script type="text/javascript" src="js/download.js"></script>
 <p><br></p>
-<p>See my <a href="https://scholar.google.com.au/citations?user=hMG_gR4AAAAJ&amp;hl=en&amp;oi=ao">Google Scholar profile</a> for bibliometrics, or <a href="http://arxiv.org/a/rubinstein_b_1">arXiv</a> for preprints.</p>
+<p>See my <a href="https://scholar.google.com.au/citations?user=hMG_gR4AAAAJ&amp;oi=ao">Google Scholar profile</a> for bibliometrics, or <a href="http://arxiv.org/a/rubinstein_b_1">arXiv</a> for preprints.</p>
 <div id="section" class="section level3">
 <h3>2020</h3>
 
@@ -520,6 +520,20 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-yang2020characterizing">
+@misc{yang2020characterizing,
+  title = {Characterizing Adversarial Transferability via Gradient Orthogonality and Smoothness},
+  year = {2020},
+  author = {Zhuolin Yang and Linyi Li and Xiaojun Xu and Shiliang Zuo and Qian Chen and Benjamin Rubinstein and Ce Zhang and Bo Li},
+  note = {Pre-print presented at ICML'2020 Workshop on Uncertainty \& Robustness in Deep Learning},
+}
+</code></pre></div>
+
+<ul>
+<li>Yang, Zhuolin, Linyi Li, Xiaojun Xu, Shiliang Zuo, Qian Chen, Benjamin Rubinstein, Ce Zhang, and Bo Li. <em>Characterizing Adversarial Transferability via Gradient Orthogonality and Smoothness</em>. Pre-print presented at ICML’2020 Workshop on Uncertainty &amp; Robustness in Deep Learning. 2020 [<a href="http://www.gatsby.ucl.ac.uk/~balaji/udl2020/accepted-papers/UDL2020-paper-071.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('yang2020characterizing.bib', 'bibtex-yang2020characterizing')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-roohi2020assessing">
 @inproceedings{roohi2020assessing,
   title = {Assessing Centrality Without Knowing Connections},
@@ -543,12 +557,12 @@ $(document).ready(function () {
   author = {Yi Han and David Hubczenko and Paul Montague and Olivier {De Vel} and Tamas Abraham and Benjamin I. P. Rubinstein and Christopher Leckie and Tansu Alpcan and Sarah Erfani},
   booktitle = {2020 International Joint Conference on Neural Networks},
   series = {IJCNN},
-  note = {To appear},
+  pages = {1--8},
 }
 </code></pre></div>
 
 <ul>
-<li>Han, Yi, David Hubczenko, Paul Montague, Olivier De Vel, Tamas Abraham, Benjamin I. P. Rubinstein, Christopher Leckie, Tansu Alpcan, and Sarah Erfani. “Adversarial Reinforcement Learning under Partial Observability in Autonomous Computer Network Defence”. In: <em>2020 International Joint Conference on Neural Networks</em>. IJCNN. To appear. 2020 [<a style="cursor: pointer;" onclick="DownloadToFile('han2020adversarial.bib', 'bibtex-han2020adversarial')">BibTeX</a>]</li>
+<li>Han, Yi, David Hubczenko, Paul Montague, Olivier De Vel, Tamas Abraham, Benjamin I. P. Rubinstein, Christopher Leckie, Tansu Alpcan, and Sarah Erfani. “Adversarial Reinforcement Learning under Partial Observability in Autonomous Computer Network Defence”. In: <em>2020 International Joint Conference on Neural Networks</em>. IJCNN. 2020, pp. 1-8 [<a href="https://arxiv.org/abs/1902.09062">full</a>; <a href="https://ieeexplore.ieee.org/abstract/document/9206634">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('han2020adversarial.bib', 'bibtex-han2020adversarial')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
