--- a/pubs.html
+++ b/pubs.html
@@ -482,7 +482,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Liu, Dongge, Gidon Ernst, Toby Murray, and Benjamin I. P. Rubinstein. “Legion: Best-First Concolic Testing”. In: <em>The 35th IEEE/ACM International Conference on Automated Software Engineering</em>. ASE. Accepted. 2020 [<a href="https://github.com/Alan32Liu/Legion">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('liu2020legionb.bib', 'bibtex-liu2020legionb')">BibTeX</a>]</li>
+<li>Liu, Dongge, Gidon Ernst, Toby Murray, and Benjamin I. P. Rubinstein. “Legion: Best-First Concolic Testing”. In: <em>The 35th IEEE/ACM International Conference on Automated Software Engineering</em>. ASE. Accepted. 2020 [<a href="https://github.com/Alan32Liu/Legion">software</a>; <a href="https://arxiv.org/abs/2002.06311">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('liu2020legionb.bib', 'bibtex-liu2020legionb')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -499,7 +499,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Liu, Dongge, Gidon Ernst, Toby Murray, and Benjamin I. P. Rubinstein. “Legion: Best-First Concolic Testing”. In: <em>Proceedings of the 23rd International Conference on Fundamental Approaches to Software Engineering</em>. FASE. Test-Comp session. 2020, pp. 545-549 [<a href="https://github.com/Alan32Liu/Legion">software</a>; <a href="https://arxiv.org/abs/2002.06311">PDF</a>; <a href="https://link.springer.com/chapter/10.1007/978-3-030-45234-6_31">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('liu2020legion.bib', 'bibtex-liu2020legion')">BibTeX</a>]</li>
+<li>Liu, Dongge, Gidon Ernst, Toby Murray, and Benjamin I. P. Rubinstein. “Legion: Best-First Concolic Testing”. In: <em>Proceedings of the 23rd International Conference on Fundamental Approaches to Software Engineering</em>. FASE. Test-Comp session. 2020, pp. 545-549 [<a href="https://github.com/Alan32Liu/Legion">software</a>; <a href="https://link.springer.com/chapter/10.1007/978-3-030-45234-6_31">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('liu2020legion.bib', 'bibtex-liu2020legion')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
