--- a/group.html
+++ b/group.html
@@ -350,7 +350,7 @@ $(document).ready(function () {
 <div id="phd-studentscompleted" class="section level3">
 <h3>PhD students—Completed</h3>
 <ul>
-<li><a href="https://au.linkedin.com/in/leyla-roohi-b4544a67">Leyla Roohi</a> (w Vanessa Teague 2017–19). Secure storage and private querying for telecommunications metadata (completed, passed)</li>
+<li><a href="https://au.linkedin.com/in/leyla-roohi-b4544a67">Leyla Roohi</a> (w Vanessa Teague 2017–19). Secure storage and private querying for telecommunications metadata → Postdoc at Univ Melbourne</li>
 <li>Yuan Li (w Trevor Cohn 2015–19). Crowd sourcing, Bayesian optimisation, NLP → Postdoc at Univ Melbourne</li>
 <li><a href="https://www.researchgate.net/profile/Lingjuan_Lyu">Lingjuan Lyu</a> (w Marimuthu Palaniswami 2016–18). Privacy in distributed sensing → Postdoc at the ANU</li>
 <li><a href="https://sites.google.com/site/safiheidari/">Safiollah Heidari</a> (w Raj Buyya 2015–18). Distributed graph processing → Founder, NeuroPhyte</li>
