--- a/impact.html
+++ b/impact.html
@@ -449,12 +449,14 @@ div.tocify {
 </div>
 <div id="policy-submissions" class="section level2">
 <h2>Policy Submissions</h2>
-<p>I have contributed submissions to a range of policy and legislation consultations and inquiries run by government departments and agencies. These responses highlight challenges and best-practice solutions in data privacy and AI.</p>
+<p>I have co-authored submissions to 4 policy and legislation consultations and inquiries run by government departments and agencies. These responses highlight challenges and best-practice solutions in data privacy and AI.</p>
 <ul>
-<li>Chris Culnane, Ben Rubinstein. <a href="submissions/Privacy_Act_Submission.pdf">Submission to the Review of the Privacy Act 1988</a> in response to <a href="https://www.ag.gov.au/integrity/consultations/review-privacy-act-1988">Review of the Privacy Act 1988</a>, Attorney-General’s Department, 29/11/2020</li>
-<li>Ben Rubinstein. <a href="submissions/AProf%20Rubinstein%20Response%20to%20Data%20Strategy%20Consultation%20Paper.pdf">Response to the “Data Strategy Consultation Paper” of the COAG Energy Council’s Energy Security Board</a> in response to <a href="http://www.coagenergycouncil.gov.au/publications/energy-security-board-data-strategy-consultation-paper">Data Strategy Consultation Paper</a>, Energy Security Board, COAG Energy Council, 27/11/2020</li>
-<li>Chris Culnane, Ben Rubinstein. <a href="submissions/Culnane-Rubinstein-DAT-Submission.pdf">Consultation Response “Data Availability and Transparency Bill”</a> in response to <a href="https://www.datacommissioner.gov.au/exposure-draft/dat">Consultation on the Data Availability and Transparency Bill 2020</a>, Office of the National Data Commissioner, 6/11/2020</li>
+<li>Chris Culnane, Ben Rubinstein. <a href="submissions/Privacy_Act_Submission.pdf">Submission to the Review of the Privacy Act 1988</a> submitted to the Attorney-General’s Department, 29/11/2020.</li>
+<li>Ben Rubinstein. <a href="submissions/AProf%20Rubinstein%20Response%20to%20Data%20Strategy%20Consultation%20Paper.pdf">Response to the “Data Strategy Consultation Paper” of the COAG Energy Council’s Energy Security Board</a> submitted to the Energy Security Board, COAG Energy Council, 27/11/2020.</li>
+<li>Chris Culnane, Ben Rubinstein. <a href="submissions/Culnane-Rubinstein-DAT-Submission.pdf">Consultation Response “Data Availability and Transparency Bill”</a> submitted to the Office of the National Data Commissioner, 6/11/2020.</li>
+<li>University of Melbourne. <a href="submissions/UoM_response_-_Data61_AI_Ethics_Framework_-_Final.pdf">Artificial Intelligence: Australia’s Ethics Framework - University of Melbourne Response</a> submitted to the Department of Industry, Innovation and Science, 6/06/2019.</li>
 </ul>
+<p>As member of the Australian Academy of Science’s <a href="https://www.science.org.au/supporting-science/national-committees-science/national-committee-information-and-communication">National Committee for Information and Communication Sciences</a> I contribued to the <a href="https://www.science.org.au/support/analysis/decadal-plans/ics/preparing-australias-digital-future">Digital Futures strategic plan</a>.</p>
 </div>
 <div id="funding-awards" class="section level2">
 <h2>Funding &amp; Awards</h2>
@@ -509,6 +511,23 @@ div.tocify {
 </div>
 <div id="service" class="section level2">
 <h2>Service</h2>
+<div id="advisory" class="section level3">
+<h3>Advisory</h3>
+<ul>
+<li>Member (2020–), Conference and Journal Ranking Advisory Committee, Computing Research and Education Association of Australasia (CORE).</li>
+<li>Member (2019–), Methodology Advisory Committee, Australian Bureau of Statistics.</li>
+<li>Member (2015–), National Committee for Information and Communication Sciences, the Australian Academy of Science.</li>
+</ul>
+</div>
+<div id="program-committees" class="section level3">
+<h3>Program committees</h3>
+<ul>
+<li><strong>ICML</strong><a href="http://www.icml-2011.org/">’2011</a>,<a href="http://icml.cc/2012/">’12</a>,<a href="https://2017.icml.cc/">’17-18 (PC)</a>,<a href="https://icml.cc/">’19-21 (area chair)</a>, <strong>NeurIPS</strong> (formerly NIPS)<a href="https://nips.cc/Conferences/2014">’2014</a>,<a href="https://nips.cc/Conferences/2017/">’17</a>,<a href="https://nips.cc/Conferences/2018/">’18</a>,<a href="https://nips.cc/Conferences/2019/">’19 (PC)</a>,<a href="https://nips.cc/Conferences/2020/">’20 (area chair)</a>, <a href="https://aaai.org/Conferences/AAAI/aaai18.php"><strong>AAAI</strong>’2018 (senior PC)</a>, <strong>ICDE</strong><a href="http://icde2016.fi/callposters.php#tabular1">’2016</a>,<a href="http://icde2017.sdsc.edu/">’17</a>, <a href="http://www.aistats.org/"><strong>AISTATS</strong>’2017</a>, <a href="https://www.cs.bgu.ac.il/~fradmin/cscml17/organization.html">CSCML’2017</a>, <strong>KDD</strong><a href="http://www.kdd.org/kdd2015/">’2015</a>,<a href="http://kdd.org/kdd2016/">’16</a>, <a href="http://www.ieee-security.org/CSFWweb/"><strong>CSF</strong>’2014</a> (co-chair AI &amp; Security Track), <a href="http://www.sigmod.org/2013/"><strong>SIGMOD</strong>’2013</a>, <a href="http://ijcai13.org/"><strong>IJCAI</strong>’2013</a></li>
+<li>Workshop PCs: <a href="https://www.usenix.org/conference/scainet19">2019 USENIX Security and AI Networking Conference (ScAINet’19)</a> (at USENIX Security), <a href="https://ppml-workshop.github.io/ppml/">Privacy Preserving Machine Learning (PPML) 2018</a> (at NeurIPS), <a href="https://ppml-workshop.github.io/ppml/">’19</a> (at CCS), <a href="https://www.ieee-security.org/TC/SPW2018/DLS/">Deep Learning for Security 2018</a> (at IEEE S&amp;P), AI for Cyber Security (AICS at AAAI)<a href="http://www-personal.umich.edu/~arunesh/AICS2017/">’2017</a>,<a href="http://www-personal.umich.edu/~arunesh/AICS2018/">’18</a>, AI &amp; Security (AISec at CCS)<a href="http://sites.google.com/a/aisec.info/aisec-2009/">’2009</a>,<a href="http://sites.google.com/a/aisec.info/aisec-2010/">’10</a>,<a href="http://sites.google.com/site/ccsaisec2013/">’13</a>,<a href="http://www-bcf.usc.edu/~aruneshs/AISec2015.html">’15</a>,<a href="http://teamcore.usc.edu/people/arunesh/AISec2016.html">’16</a>,<a href="http://www.ai-sec.net/AISec2017/index.html">’17</a>,<a href="http://aisec2018.icsi.berkeley.edu/aisec2018/">’18</a>,<a href="https://aisec.cc/">’19</a>, <a href="http://www.s-sspr.org/">S+SSPR’2016</a> (at ICPR), <a href="http://fias.uni-frankfurt.de/~dimitrakakis/workshops/psdml-2010/">PSDML’2010</a> (at ECML/PKDD)</li>
+<li>Organiser: ACM AI &amp; Security workshops (AISEC)<a href="http://www.flacp.fujitsulabs.com/~aisec2011/index.html">’2011</a>,<a href="http://research.microsoft.com/en-us/events/aisec2012/default.aspx">’12</a>,<a href="http://www.cse.chalmers.se/~aikmitr/AISec2014.html">’14</a>, <a href="https://sites.google.com/site/learnsecprivacy2014/">Learning, Security &amp; Privacy workshop</a> (at ICML’2014)</li>
+<li>Chair, Demonstration and Workshop Local Arrangements <a href="http://www.sigmod2015.org/">SIGMOD’2015</a></li>
+</ul>
+</div>
 <div id="speaking-engagements" class="section level3">
 <h3>Speaking engagements</h3>
 <ul>
@@ -530,19 +549,6 @@ div.tocify {
 <li>12/2015: Plenary at the 12th Engineering Mathematics and Applications Conference (<a href="https://emac2015.unisa.edu.au/">EMAC’2015</a>) the biennial meeting of the EMG special interest group of ANZIAM</li>
 <li>07/2015: Keynote at the Australian Academy of Science Elizabeth and Frederick <a href="http://geoconference.wix.com/efwhite2015">White Research Conference</a> on Mining Data for Detection and Prediction of Failure in Geomaterial</li>
 <li>11/2014: Facebook (Menlo Park) talk Data Integration through the Lens of Statistical Learning</li>
-</ul>
-</div>
-<div id="strategic-plan" class="section level3">
-<h3>Strategic plan</h3>
-<p>As member of the Australian Academy of Science’s <a href="https://www.science.org.au/supporting-science/national-committees-science/national-committee-information-and-communication">National Committee for Information and Communication Sciences</a> (2015–2020) contribued towards the development of the <a href="https://www.science.org.au/support/analysis/decadal-plans/ics/preparing-australias-digital-future">Digital Futures strategic plan</a>.</p>
-</div>
-<div id="program-committee-membership" class="section level3">
-<h3>Program committee membership</h3>
-<ul>
-<li><strong>ICML</strong><a href="http://www.icml-2011.org/">’2011</a>,<a href="http://icml.cc/2012/">’12</a>,<a href="https://2017.icml.cc/">’17</a>,<a href="https://2017.icml.cc/">’18</a>,<a href="https://icml.cc/Conferences/2019">’19 (area chair)</a>,<a href="https://icml.cc/">’20 (area chair)</a>, <strong>NeurIPS</strong> (formerly NIPS)<a href="https://nips.cc/Conferences/2014">’2014</a>,<a href="https://nips.cc/Conferences/2017/">’17</a>,<a href="https://nips.cc/Conferences/2018/">’18</a>,<a href="https://nips.cc/Conferences/2019/">’19</a>,<a href="https://nips.cc/Conferences/2020/">’20 area chair</a>, <a href="https://aaai.org/Conferences/AAAI/aaai18.php"><strong>AAAI</strong>’2018 (senior PC)</a>, <strong>ICDE</strong><a href="http://icde2016.fi/callposters.php#tabular1">’2016</a>,<a href="http://icde2017.sdsc.edu/">’17</a>, <a href="http://www.aistats.org/"><strong>AISTATS</strong>’2017</a>, <a href="https://www.cs.bgu.ac.il/~fradmin/cscml17/organization.html">CSCML’2017</a>, <strong>KDD</strong><a href="http://www.kdd.org/kdd2015/">’2015</a>,<a href="http://kdd.org/kdd2016/">’16</a>, <a href="http://www.ieee-security.org/CSFWweb/"><strong>CSF</strong>’2014</a> (co-chair AI &amp; Security Track), <a href="http://www.sigmod.org/2013/"><strong>SIGMOD</strong>’2013</a>, <a href="http://ijcai13.org/"><strong>IJCAI</strong>’2013</a></li>
-<li>Workshop PCs: <a href="https://www.usenix.org/conference/scainet19">2019 USENIX Security and AI Networking Conference (ScAINet’19)</a> (at USENIX Security), <a href="https://ppml-workshop.github.io/ppml/">Privacy Preserving Machine Learning (PPML) 2018</a> (at NeurIPS), <a href="https://ppml-workshop.github.io/ppml/">’19</a> (at CCS), <a href="https://www.ieee-security.org/TC/SPW2018/DLS/">Deep Learning for Security 2018</a> (at IEEE S&amp;P), AI for Cyber Security (AICS at AAAI)<a href="http://www-personal.umich.edu/~arunesh/AICS2017/">’2017</a>,<a href="http://www-personal.umich.edu/~arunesh/AICS2018/">’18</a>, AI &amp; Security (AISec at CCS)<a href="http://sites.google.com/a/aisec.info/aisec-2009/">’2009</a>,<a href="http://sites.google.com/a/aisec.info/aisec-2010/">’10</a>,<a href="http://sites.google.com/site/ccsaisec2013/">’13</a>,<a href="http://www-bcf.usc.edu/~aruneshs/AISec2015.html">’15</a>,<a href="http://teamcore.usc.edu/people/arunesh/AISec2016.html">’16</a>,<a href="http://www.ai-sec.net/AISec2017/index.html">’17</a>,<a href="http://aisec2018.icsi.berkeley.edu/aisec2018/">’18</a>,<a href="https://aisec.cc/">’19</a>, <a href="http://www.s-sspr.org/">S+SSPR’2016</a> (at ICPR), <a href="http://fias.uni-frankfurt.de/~dimitrakakis/workshops/psdml-2010/">PSDML’2010</a> (at ECML/PKDD)</li>
-<li>Organiser: ACM AI &amp; Security workshops (AISEC)<a href="http://www.flacp.fujitsulabs.com/~aisec2011/index.html">’2011</a>,<a href="http://research.microsoft.com/en-us/events/aisec2012/default.aspx">’12</a>,<a href="http://www.cse.chalmers.se/~aikmitr/AISec2014.html">’14</a>, <a href="https://sites.google.com/site/learnsecprivacy2014/">Learning, Security &amp; Privacy workshop</a> (at ICML’2014)</li>
-<li>Chair, Demonstration and Workshop Local Arrangements <a href="http://www.sigmod2015.org/">SIGMOD’2015</a></li>
 </ul>
 </div>
 </div>
