--- a/impact.html
+++ b/impact.html
@@ -458,11 +458,11 @@ div.tocify {
 <h2>Policy Submissions</h2>
 <p>I have co-authored submissions to 5 policy and legislation consultations and inquiries run by government departments and agencies. These responses highlight challenges and best-practice solutions in data privacy and AI.</p>
 <ul>
-<li>Chris Culnane, Ben Rubinstein. <a href="submissions/Privacy_Act_Submission.pdf">Submission to the Review of the Privacy Act 1988</a> submitted to the , Attorney-General’s Department, 29/11/2020.</li>
-<li>Ben Rubinstein. <a href="submissions/AProf%20Rubinstein%20Response%20to%20Data%20Strategy%20Consultation%20Paper.pdf">Response to the “Data Strategy Consultation Paper” of the COAG Energy Council’s Energy Security Board</a> submitted to the , Energy Security Board, COAG Energy Council, 27/11/2020.</li>
-<li>Chris Culnane, Ben Rubinstein. <a href="submissions/Culnane-Rubinstein-DAT-Submission.pdf">Consultation Response “Data Availability and Transparency Bill”</a> submitted to the , Office of the National Data Commissioner, 6/11/2020.</li>
+<li>Chris Culnane, Ben Rubinstein. <a href="submissions/Privacy_Act_Submission.pdf">Submission to the Review of the Privacy Act 1988</a> submitted to the Attorney-General’s Department, 29/11/2020.</li>
+<li>Ben Rubinstein. <a href="submissions/AProf%20Rubinstein%20Response%20to%20Data%20Strategy%20Consultation%20Paper.pdf">Response to the “Data Strategy Consultation Paper” of the COAG Energy Council’s Energy Security Board</a> submitted to the Energy Security Board, COAG Energy Council, 27/11/2020.</li>
+<li>Chris Culnane, Ben Rubinstein. <a href="submissions/Culnane-Rubinstein-DAT-Submission.pdf">Consultation Response “Data Availability and Transparency Bill”</a> submitted to the Office of the National Data Commissioner, 6/11/2020.</li>
 <li>Ben Rubinstein. Data stakeholder consultation (oral) in response to Use of Administrative Data in the 2021 Census of Population and Housing, Australian Bureau of Statistics, 17/02/2020.</li>
-<li>University of Melbourne. <a href="submissions/UoM_response_-_Data61_AI_Ethics_Framework_-_Final.pdf">Artificial Intelligence: Australia’s Ethics Framework - University of Melbourne Response</a> submitted to the , Department of Industry, Innovation and Science, 6/06/2019.</li>
+<li>University of Melbourne. <a href="submissions/UoM_response_-_Data61_AI_Ethics_Framework_-_Final.pdf">Artificial Intelligence: Australia’s Ethics Framework - University of Melbourne Response</a> submitted to the Department of Industry, Innovation and Science, 6/06/2019.</li>
 </ul>
 <p>As member of the Australian Academy of Science’s <a href="https://www.science.org.au/supporting-science/national-committees-science/national-committee-information-and-communication">National Committee for Information and Communication Sciences</a> I contributed to the <a href="https://www.science.org.au/support/analysis/decadal-plans/ics/preparing-australias-digital-future">Digital Futures strategic plan</a>.</p>
 </div>
