--- a/pubs.html
+++ b/pubs.html
@@ -670,12 +670,11 @@ $(document).ready(function () {
   year = {2019},
   author = {Anthony D. Joseph and Blaine Nelson and Benjamin I. P. Rubinstein and J. D. Tygar},
   publisher = {Cambridge University Press},
-  note = {in press for April 2019 publication},
 }
 </code></pre></div>
 
 <ul>
-<li>Joseph, Anthony D., Blaine Nelson, Benjamin I. P. Rubinstein, and J. D. Tygar. <em>Adversarial Machine Learning</em>. in press for April 2019 publication. Cambridge University Press, 2019 [<a href="https://www.cambridge.org/core/books/adversarial-machine-learning/C42A9D49CBC626DF7B8E54E72974AA3B">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('joseph2019adversarial.bib', 'bibtex-joseph2019adversarial')">BibTeX</a>]</li>
+<li>Joseph, Anthony D., Blaine Nelson, Benjamin I. P. Rubinstein, and J. D. Tygar. <em>Adversarial Machine Learning</em>. Cambridge University Press, 2019 [<a href="https://www.cambridge.org/core/books/adversarial-machine-learning/C42A9D49CBC626DF7B8E54E72974AA3B">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('joseph2019adversarial.bib', 'bibtex-joseph2019adversarial')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
